--- a/package/crds/firewall.crossplane.io_policyintrusionserviceprofiles.yaml
+++ b/package/crds/firewall.crossplane.io_policyintrusionserviceprofiles.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.3
   creationTimestamp: null
-  name: policyinstrusionservicepolicies.firewall.crossplane.io
+  name: policyintrusionserviceprofiles.firewall.crossplane.io
 spec:
   group: firewall.crossplane.io
   names:
@@ -13,10 +13,10 @@ spec:
     - crossplane
     - managed
     - nsxt
-    kind: PolicyInstrusionServicePolicy
-    listKind: PolicyInstrusionServicePolicyList
-    plural: policyinstrusionservicepolicies
-    singular: policyinstrusionservicepolicy
+    kind: PolicyIntrusionServiceProfile
+    listKind: PolicyIntrusionServiceProfileList
+    plural: policyintrusionserviceprofiles
+    singular: policyintrusionserviceprofile
   scope: Cluster
   versions:
   - additionalPrinterColumns:
@@ -35,7 +35,7 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: PolicyInstrusionServicePolicy is the Schema for the PolicyInstrusionServicePolicys
+        description: PolicyIntrusionServiceProfile is the Schema for the PolicyIntrusionServiceProfiles
           API. <no value>
         properties:
           apiVersion:
@@ -51,8 +51,8 @@ spec:
           metadata:
             type: object
           spec:
-            description: PolicyInstrusionServicePolicySpec defines the desired state
-              of PolicyInstrusionServicePolicy
+            description: PolicyIntrusionServiceProfileSpec defines the desired state
+              of PolicyIntrusionServiceProfile
             properties:
               deletionPolicy:
                 default: Delete
@@ -69,9 +69,6 @@ spec:
                 type: string
               forProvider:
                 properties:
-                  comments:
-                    description: Comments for security policy lock/unlock
-                    type: string
                   context:
                     description: Resource context
                     items:
@@ -84,119 +81,62 @@ spec:
                       - projectId
                       type: object
                     type: array
+                  criteria:
+                    description: Filtering criteria for the IDS Profile
+                    items:
+                      properties:
+                        attackTargets:
+                          description: List of attack target criteria
+                          items:
+                            type: string
+                          type: array
+                        attackTypes:
+                          description: List of attack type criteria
+                          items:
+                            type: string
+                          type: array
+                        cvss:
+                          description: Common Vulnerability Scoring System Ranges
+                          items:
+                            type: string
+                          type: array
+                        productsAffected:
+                          description: List of products affected
+                          items:
+                            type: string
+                          type: array
+                      type: object
+                    type: array
                   description:
                     description: Description for this resource
                     type: string
                   displayName:
                     description: Display name for this resource
                     type: string
-                  domain:
-                    description: The domain name to use for resources. If not specified
-                      'default' is used
-                    type: string
-                  locked:
-                    description: Indicates whether a security policy should be locked.
-                      If locked by a user, no other user would be able to modify this
-                      policy
-                    type: boolean
                   nsxId:
                     description: NSX ID for this resource
                     type: string
-                  rule:
-                    description: List of rules in the section
+                  overriddenSignature:
+                    description: Signatures that has been overridden for this Profile
                     items:
                       properties:
                         action:
-                          description: Action
+                          description: This will take precedence over IDS signature
+                            action
                           type: string
-                        description:
-                          description: Description for this resource
-                          type: string
-                        destinationGroups:
-                          description: List of destination groups
-                          items:
-                            type: string
-                          type: array
-                        destinationsExcluded:
-                          description: Negation of destination groups
+                        enabled:
                           type: boolean
-                        direction:
-                          description: Traffic direction
+                        signatureId:
                           type: string
-                        disabled:
-                          description: Flag to disable the rule
-                          type: boolean
-                        displayName:
-                          description: Display name for this resource
-                          type: string
-                        idsProfiles:
-                          description: List of policy Paths for IDS Profiles
-                          items:
-                            type: string
-                          type: array
-                        ipVersion:
-                          description: IP version
-                          type: string
-                        logLabel:
-                          description: Additional information (string) which will
-                            be propagated to the rule syslog
-                          type: string
-                        logged:
-                          description: Flag to enable packet logging
-                          type: boolean
-                        notes:
-                          description: Text for additional notes on changes
-                          type: string
-                        profiles:
-                          description: List of profiles
-                          items:
-                            type: string
-                          type: array
-                        scope:
-                          description: List of policy paths where the rule is applied
-                          items:
-                            type: string
-                          type: array
-                        sequenceNumber:
-                          description: Sequence number of the this rule
-                          type: number
-                        services:
-                          description: List of services to match
-                          items:
-                            type: string
-                          type: array
-                        sourceGroups:
-                          description: List of source groups
-                          items:
-                            type: string
-                          type: array
-                        sourcesExcluded:
-                          description: Negation of source groups
-                          type: boolean
-                        tag:
-                          description: Set of opaque identifiers meaningful to the
-                            user
-                          items:
-                            properties:
-                              scope:
-                                type: string
-                              tag:
-                                type: string
-                            type: object
-                          type: array
                       required:
-                      - displayName
-                      - idsProfiles
+                      - signatureId
                       type: object
                     type: array
-                  sequenceNumber:
-                    description: This field is used to resolve conflicts between security
-                      policies across domains
-                    type: number
-                  stateful:
-                    description: When it is stateful, the state of the network connects
-                      are tracked and a stateful packet inspection is performed
-                    type: boolean
+                  severities:
+                    description: Severities of signatures which are part of this profile
+                    items:
+                      type: string
+                    type: array
                   tag:
                     description: Set of opaque identifiers meaningful to the user
                     items:
@@ -397,15 +337,14 @@ spec:
             x-kubernetes-validations:
             - message: displayName is a required parameter
               rule: self.managementPolicy == 'ObserveOnly' || has(self.forProvider.displayName)
+            - message: severities is a required parameter
+              rule: self.managementPolicy == 'ObserveOnly' || has(self.forProvider.severities)
           status:
-            description: PolicyInstrusionServicePolicyStatus defines the observed
-              state of PolicyInstrusionServicePolicy.
+            description: PolicyIntrusionServiceProfileStatus defines the observed
+              state of PolicyIntrusionServiceProfile.
             properties:
               atProvider:
                 properties:
-                  comments:
-                    description: Comments for security policy lock/unlock
-                    type: string
                   context:
                     description: Resource context
                     items:
@@ -416,26 +355,57 @@ spec:
                           type: string
                       type: object
                     type: array
+                  criteria:
+                    description: Filtering criteria for the IDS Profile
+                    items:
+                      properties:
+                        attackTargets:
+                          description: List of attack target criteria
+                          items:
+                            type: string
+                          type: array
+                        attackTypes:
+                          description: List of attack type criteria
+                          items:
+                            type: string
+                          type: array
+                        cvss:
+                          description: Common Vulnerability Scoring System Ranges
+                          items:
+                            type: string
+                          type: array
+                        productsAffected:
+                          description: List of products affected
+                          items:
+                            type: string
+                          type: array
+                      type: object
+                    type: array
                   description:
                     description: Description for this resource
                     type: string
                   displayName:
                     description: Display name for this resource
                     type: string
-                  domain:
-                    description: The domain name to use for resources. If not specified
-                      'default' is used
-                    type: string
                   id:
                     type: string
-                  locked:
-                    description: Indicates whether a security policy should be locked.
-                      If locked by a user, no other user would be able to modify this
-                      policy
-                    type: boolean
                   nsxId:
                     description: NSX ID for this resource
                     type: string
+                  overriddenSignature:
+                    description: Signatures that has been overridden for this Profile
+                    items:
+                      properties:
+                        action:
+                          description: This will take precedence over IDS signature
+                            action
+                          type: string
+                        enabled:
+                          type: boolean
+                        signatureId:
+                          type: string
+                      type: object
+                    type: array
                   path:
                     description: Policy path for this resource
                     type: string
@@ -447,117 +417,11 @@ spec:
                       If the _revision provided in a PUT request is missing or stale,
                       the operation will be rejected
                     type: number
-                  rule:
-                    description: List of rules in the section
+                  severities:
+                    description: Severities of signatures which are part of this profile
                     items:
-                      properties:
-                        action:
-                          description: Action
-                          type: string
-                        description:
-                          description: Description for this resource
-                          type: string
-                        destinationGroups:
-                          description: List of destination groups
-                          items:
-                            type: string
-                          type: array
-                        destinationsExcluded:
-                          description: Negation of destination groups
-                          type: boolean
-                        direction:
-                          description: Traffic direction
-                          type: string
-                        disabled:
-                          description: Flag to disable the rule
-                          type: boolean
-                        displayName:
-                          description: Display name for this resource
-                          type: string
-                        idsProfiles:
-                          description: List of policy Paths for IDS Profiles
-                          items:
-                            type: string
-                          type: array
-                        ipVersion:
-                          description: IP version
-                          type: string
-                        logLabel:
-                          description: Additional information (string) which will
-                            be propagated to the rule syslog
-                          type: string
-                        logged:
-                          description: Flag to enable packet logging
-                          type: boolean
-                        notes:
-                          description: Text for additional notes on changes
-                          type: string
-                        nsxId:
-                          description: NSX ID for this resource
-                          type: string
-                        path:
-                          description: Policy path for this resource
-                          type: string
-                        profiles:
-                          description: List of profiles
-                          items:
-                            type: string
-                          type: array
-                        revision:
-                          description: The _revision property describes the current
-                            revision of the resource. To prevent clients from overwriting
-                            each other's changes, PUT operations must include the
-                            current _revision of the resource, which clients should
-                            obtain by issuing a GET operation. If the _revision provided
-                            in a PUT request is missing or stale, the operation will
-                            be rejected
-                          type: number
-                        ruleId:
-                          description: Unique positive number that is assigned by
-                            the system and is useful for debugging
-                          type: number
-                        scope:
-                          description: List of policy paths where the rule is applied
-                          items:
-                            type: string
-                          type: array
-                        sequenceNumber:
-                          description: Sequence number of the this rule
-                          type: number
-                        services:
-                          description: List of services to match
-                          items:
-                            type: string
-                          type: array
-                        sourceGroups:
-                          description: List of source groups
-                          items:
-                            type: string
-                          type: array
-                        sourcesExcluded:
-                          description: Negation of source groups
-                          type: boolean
-                        tag:
-                          description: Set of opaque identifiers meaningful to the
-                            user
-                          items:
-                            properties:
-                              scope:
-                                type: string
-                              tag:
-                                type: string
-                            type: object
-                          type: array
-                      type: object
+                      type: string
                     type: array
-                  sequenceNumber:
-                    description: This field is used to resolve conflicts between security
-                      policies across domains
-                    type: number
-                  stateful:
-                    description: When it is stateful, the state of the network connects
-                      are tracked and a stateful packet inspection is performed
-                    type: boolean
                   tag:
                     description: Set of opaque identifiers meaningful to the user
                     items:
