update gateways and routing resources

--- a/package/crds/gatewaysandrouting.crossplane.io_policybgpneighbors.yaml
+++ b/package/crds/gatewaysandrouting.crossplane.io_policybgpneighbors.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.3
   creationTimestamp: null
-  name: policystaticroutebfdpeers.gatewaysandrouting.crossplane.io
+  name: policybgpneighbors.gatewaysandrouting.crossplane.io
 spec:
   group: gatewaysandrouting.crossplane.io
   names:
@@ -13,10 +13,10 @@ spec:
     - crossplane
     - managed
     - nsxt
-    kind: PolicyStaticRouteBfdPeer
-    listKind: PolicyStaticRouteBfdPeerList
-    plural: policystaticroutebfdpeers
-    singular: policystaticroutebfdpeer
+    kind: PolicyBgpNeighbor
+    listKind: PolicyBgpNeighborList
+    plural: policybgpneighbors
+    singular: policybgpneighbor
   scope: Cluster
   versions:
   - additionalPrinterColumns:
@@ -35,8 +35,8 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: PolicyStaticRouteBfdPeer is the Schema for the PolicyStaticRouteBfdPeers
-          API. <no value>
+        description: PolicyBgpNeighbor is the Schema for the PolicyBgpNeighbors API.
+          <no value>
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -51,8 +51,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: PolicyStaticRouteBfdPeerSpec defines the desired state of
-              PolicyStaticRouteBfdPeer
+            description: PolicyBgpNeighborSpec defines the desired state of PolicyBgpNeighbor
             properties:
               deletionPolicy:
                 default: Delete
@@ -69,8 +68,28 @@ spec:
                 type: string
               forProvider:
                 properties:
-                  bfdProfilePath:
-                    description: Policy path for BFD Profile
+                  allowAsIn:
+                    description: Flag to enable allowas_in option for BGP neighbor
+                    type: boolean
+                  bfdConfig:
+                    description: BFD configuration for failure detection
+                    items:
+                      properties:
+                        enabled:
+                          description: Flag to enable/disable BFD configuration
+                          type: boolean
+                        interval:
+                          description: Time interval between heartbeat packets in
+                            milliseconds
+                          type: number
+                        multiple:
+                          description: Number of times heartbeat packet is missed
+                            before BFD declares the neighbor is down
+                          type: number
+                      type: object
+                    type: array
+                  bgpPath:
+                    description: Policy path to the BGP for this neighbor
                     type: string
                   description:
                     description: Description for this resource
@@ -78,20 +97,70 @@ spec:
                   displayName:
                     description: Display name for this resource
                     type: string
-                  enabled:
-                    description: Flag to enable/disable this peer
-                    type: boolean
-                  gatewayPath:
-                    description: Policy path for Tier0 gateway
+                  gracefulRestartMode:
+                    description: BGP Graceful Restart Configuration Mode
+                    type: string
+                  holdDownTime:
+                    description: Wait time in seconds before declaring peer dead
+                    type: number
+                  keepAliveTime:
+                    description: Interval between keep alive messages sent to peer
+                    type: number
+                  maximumHopLimit:
+                    description: Maximum number of hops allowed to reach BGP neighbor
+                    type: number
+                  neighborAddress:
+                    description: Neighbor IP Address
                     type: string
                   nsxId:
                     description: NSX ID for this resource
                     type: string
-                  peerAddress:
-                    description: IPv4 Address of the peer
+                  passwordSecretRef:
+                    description: Password for BGP neighbor authentication
+                    properties:
+                      key:
+                        description: The key to select.
+                        type: string
+                      name:
+                        description: Name of the secret.
+                        type: string
+                      namespace:
+                        description: Namespace of the secret.
+                        type: string
+                    required:
+                    - key
+                    - name
+                    - namespace
+                    type: object
+                  remoteAsNum:
+                    description: ASN of the neighbor in ASPLAIN or ASDOT Format
                     type: string
+                  routeFiltering:
+                    description: Enable address families and route filtering in each
+                      direction
+                    items:
+                      properties:
+                        addressFamily:
+                          description: Address family type
+                          type: string
+                        enabled:
+                          description: Flag to enable/disable address family
+                          type: boolean
+                        inRouteFilter:
+                          description: Prefix-list or route map path for IN direction
+                          type: string
+                        maximumRoutes:
+                          description: Maximum number of routes for the address family
+                          type: number
+                        outRouteFilter:
+                          description: Prefix-list or route map path for OUT direction
+                          type: string
+                      required:
+                      - addressFamily
+                      type: object
+                    type: array
                   sourceAddresses:
-                    description: Array of Tier0 external interface IP addresses
+                    description: Source IP Addresses for BGP peering
                     items:
                       type: string
                     type: array
@@ -293,22 +362,41 @@ spec:
             - forProvider
             type: object
             x-kubernetes-validations:
-            - message: bfdProfilePath is a required parameter
-              rule: self.managementPolicy == 'ObserveOnly' || has(self.forProvider.bfdProfilePath)
+            - message: bgpPath is a required parameter
+              rule: self.managementPolicy == 'ObserveOnly' || has(self.forProvider.bgpPath)
             - message: displayName is a required parameter
               rule: self.managementPolicy == 'ObserveOnly' || has(self.forProvider.displayName)
-            - message: gatewayPath is a required parameter
-              rule: self.managementPolicy == 'ObserveOnly' || has(self.forProvider.gatewayPath)
-            - message: peerAddress is a required parameter
-              rule: self.managementPolicy == 'ObserveOnly' || has(self.forProvider.peerAddress)
+            - message: neighborAddress is a required parameter
+              rule: self.managementPolicy == 'ObserveOnly' || has(self.forProvider.neighborAddress)
+            - message: remoteAsNum is a required parameter
+              rule: self.managementPolicy == 'ObserveOnly' || has(self.forProvider.remoteAsNum)
           status:
-            description: PolicyStaticRouteBfdPeerStatus defines the observed state
-              of PolicyStaticRouteBfdPeer.
+            description: PolicyBgpNeighborStatus defines the observed state of PolicyBgpNeighbor.
             properties:
               atProvider:
                 properties:
-                  bfdProfilePath:
-                    description: Policy path for BFD Profile
+                  allowAsIn:
+                    description: Flag to enable allowas_in option for BGP neighbor
+                    type: boolean
+                  bfdConfig:
+                    description: BFD configuration for failure detection
+                    items:
+                      properties:
+                        enabled:
+                          description: Flag to enable/disable BFD configuration
+                          type: boolean
+                        interval:
+                          description: Time interval between heartbeat packets in
+                            milliseconds
+                          type: number
+                        multiple:
+                          description: Number of times heartbeat packet is missed
+                            before BFD declares the neighbor is down
+                          type: number
+                      type: object
+                    type: array
+                  bgpPath:
+                    description: Policy path to the BGP for this neighbor
                     type: string
                   description:
                     description: Description for this resource
@@ -316,13 +404,22 @@ spec:
                   displayName:
                     description: Display name for this resource
                     type: string
-                  enabled:
-                    description: Flag to enable/disable this peer
-                    type: boolean
-                  gatewayPath:
-                    description: Policy path for Tier0 gateway
+                  gracefulRestartMode:
+                    description: BGP Graceful Restart Configuration Mode
                     type: string
+                  holdDownTime:
+                    description: Wait time in seconds before declaring peer dead
+                    type: number
                   id:
+                    type: string
+                  keepAliveTime:
+                    description: Interval between keep alive messages sent to peer
+                    type: number
+                  maximumHopLimit:
+                    description: Maximum number of hops allowed to reach BGP neighbor
+                    type: number
+                  neighborAddress:
+                    description: Neighbor IP Address
                     type: string
                   nsxId:
                     description: NSX ID for this resource
@@ -330,8 +427,8 @@ spec:
                   path:
                     description: Policy path for this resource
                     type: string
-                  peerAddress:
-                    description: IPv4 Address of the peer
+                  remoteAsNum:
+                    description: ASN of the neighbor in ASPLAIN or ASDOT Format
                     type: string
                   revision:
                     description: The _revision property describes the current revision
@@ -341,8 +438,30 @@ spec:
                       If the _revision provided in a PUT request is missing or stale,
                       the operation will be rejected
                     type: number
+                  routeFiltering:
+                    description: Enable address families and route filtering in each
+                      direction
+                    items:
+                      properties:
+                        addressFamily:
+                          description: Address family type
+                          type: string
+                        enabled:
+                          description: Flag to enable/disable address family
+                          type: boolean
+                        inRouteFilter:
+                          description: Prefix-list or route map path for IN direction
+                          type: string
+                        maximumRoutes:
+                          description: Maximum number of routes for the address family
+                          type: number
+                        outRouteFilter:
+                          description: Prefix-list or route map path for OUT direction
+                          type: string
+                      type: object
+                    type: array
                   sourceAddresses:
-                    description: Array of Tier0 external interface IP addresses
+                    description: Source IP Addresses for BGP peering
                     items:
                       type: string
                     type: array
